UI V2 first commit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,31 +60,33 @@
     </script>
   </head>
   <body>
-    <header class="navbar">
-      <div class="brand">
-        <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
-      </div>
-
-      <div id="nav-toggle" class="nav-toggle" aria-label="Toggle menu">
-      </div>
-
-      <nav id="nav-menu" class="nav-links">
-        <a href="{{ '/home/' | relative_url }}">Home</a>
-        <a href="{{ '/blog/' | relative_url }}">Blog</a>
-        <a href="{{ '/about/' | relative_url }}">About</a>
-        
-        <div class="language-dropdown">
-          <button id="language-toggle" class="language-button" aria-label="Select language">
-            <span id="current-lang">{{ page.lang | default: site.default_lang | upcase }}</span>
-            <span class="dropdown-arrow">▼</span>
-          </button>
-          <div id="language-menu" class="language-menu">
-            <a href="#" data-lang="en" class="language-option">EN</a>
-            <a href="#" data-lang="fr" class="language-option">FR</a>
-            <a href="#" data-lang="nl" class="language-option">NL</a>
-          </div>
+    <header class="navbar-container">
+      <div class="navbar">
+        <div class="brand">
+          <img src="/assets/img/logo-outline.png" alt="Alt text">
         </div>
-      </nav>
+  
+        <div id="nav-toggle" class="nav-toggle" aria-label="Toggle menu">
+          Yoohoo
+        </div>
+  
+        <nav id="nav-menu" class="nav-links">
+          <a href="{{ '/home/' | relative_url }}">Home</a>
+          <a href="{{ '/blog/' | relative_url }}">Blog</a>
+          
+          <!-- <div class="language-dropdown">
+            <button id="language-toggle" class="language-button" aria-label="Select language">
+              <span id="current-lang">{{ page.lang | default: site.default_lang | upcase }}</span>
+              <span class="dropdown-arrow">▼</span>
+            </button>
+            <div id="language-menu" class="language-menu">
+              <a href="#" data-lang="en" class="language-option">EN</a>
+              <a href="#" data-lang="fr" class="language-option">FR</a>
+              <a href="#" data-lang="nl" class="language-option">NL</a>
+            </div>
+          </div> -->
+        </nav>
+      </div>
     </header>
 
     <main class="container">
