--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -60,9 +60,10 @@ a {
 }
 
 .nav-links a {
+  width: 100px;
   position: relative;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   flex-direction: column;
   justify-content: flex-end;
   padding: 0.5rem 1.25rem;
