f Adjust layout page structure

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
     <header class="navbar-container">
       <div class="navbar">
         <div class="brand">
-          <img src="/assets/img/logo-outline.png" alt="Alt text">
+          <img src="/assets/img/logo-outline.png" alt="Pragma Point Logo">
         </div>
   
         <div id="nav-toggle" class="nav-toggle" aria-label="Toggle menu">
@@ -73,6 +73,7 @@
         <nav id="nav-menu" class="nav-links">
           <a href="{{ '/home/' | relative_url }}">Home</a>
           <a href="{{ '/blog/' | relative_url }}">Blog</a>
+          <a href="{{ '/contact/' | relative_url }}">Contact</a>
           
           <!-- <div class="language-dropdown">
             <button id="language-toggle" class="language-button" aria-label="Select language">
@@ -89,8 +90,10 @@
       </div>
     </header>
 
-    <main class="container">
-      {{ content }}
+    <main class="content-container">
+      <div class="content">
+        {{ content }}
+      </div>
     </main>
   </body>
 </html>
