--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@
 }
 
 body {
+  width: 100%;
   margin: 0;
   font-family: system-ui, sans-serif;
   color: var(--text-primary);
@@ -23,29 +24,46 @@ a {
   text-decoration: none;
 }
 
-.container {
-  max-width: 720px;
-  margin: 2rem auto;
-  padding: 0 1rem;
+.content-container, .navbar-container {
+  width: 100%;
+  display: flex;
+}
+
+.content-container {
+  flex-direction: column;
+  align-items: center;
 }
 
 .navbar-container {
-  width: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.homepage-hero-image {
+  width: 100%;
+  max-height: 700px;
+  object-fit: cover;
+  object-position: bottom;
+}
+
+.navbar, .content {
+  width: 95%;
+  max-width: 1843px;
+}
+
+@media (max-width: 600px) {
+  .homepage-hero-image {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .navbar {
-  width: 90%;
   height: 64px;
   display: flex;
   justify-content: space-between;
   border-bottom: 3px solid #000000;
   background: var(--bg-primary);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
 }
 
 .brand img{
@@ -74,6 +92,9 @@ a {
 .nav-links a:hover {
   color: var(--text-secondary);
   font-weight: 700;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 2px;
 }
 
 .nav-links a::before {
@@ -144,6 +165,29 @@ a {
     padding: 0.4rem;
     height: auto; /* reset from desktop height: 100% */
     width: auto;
+  }
+
+  .nav-links a:first-child {
+    border-top: none;
+  }
+
+   /* Mobile-specific hover animation - right to left */
+   .nav-links a::before {
+    position: absolute;
+    top: 0;
+    right: -100%; /* Start from right, off-screen */
+    left: auto;    /* Reset left positioning */
+    bottom: auto;  /* Reset bottom positioning */
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    transition: all 0.2s;
+    z-index: -1;
+  }
+
+  .nav-links a:hover::before {
+    right: 0; /* Slide in from right */
   }
 
   .nav-links a:first-child {
