--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,7 +13,7 @@
 body {
   width: 100%;
   margin: 0;
-  font-family: system-ui, sans-serif;
+  font-family: "Source Sans 3", sans-serif;
   color: var(--text-primary);
   background-color: var(--bg-primary);
   font-size: 18px;
@@ -37,6 +37,34 @@ a {
 .navbar-container {
   justify-content: center;
   align-items: center;
+}
+
+.homepage-title { 
+  position: absolute;
+  top: 10%;
+  left: 5%;
+  color: white;
+  font-size: 5vw;
+  margin: 0;
+}
+
+.homepage-subtitle {
+  position: absolute;
+  color: white;
+  font-size: 2.5vw;
+  margin: 0;
+  top: 28%;
+  left: 5%;
+}
+
+@media (max-width: 600px) {
+  .homepage-subtitle {
+    top: 22%;
+  }
+}
+
+.homepage-hero-image-container {
+  position: relative;
 }
 
 .homepage-hero-image {
@@ -105,7 +133,7 @@ a {
   right: 0;
   content: "";
   width: 100%;
-  height: 100%;
+  height: 70%;
   background-color: black;
   transition: all 0.2s;
   z-index: -1;
