f Add burger menu FA icon and use it

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,12 +71,11 @@
         </div>
   
         <div id="nav-toggle" class="nav-toggle" aria-label="Toggle menu">
-          Yoohoo
+          <img src="/assets/img/bars-solid-full.svg" alt="Toggle Menu">
         </div>
   
         <nav id="nav-menu" class="nav-links">
           <a href="{{ '/home/' | relative_url }}">Home</a>
-          <a href="{{ '/blog/' | relative_url }}">Blog</a>
           <a href="{{ '/contact/' | relative_url }}">Contact</a>
           
           <!-- <div class="language-dropdown">
