--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -164,26 +164,36 @@ a {
     align-items: flex-end;
     flex-direction: column;
     justify-content: flex-end;
-    padding: 0.5rem 1.25rem;
+  }
+
+  .nav-toggle img {
+    width: 48px;
+    height: 48px;
   }
 
   .nav-links {
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: stretch;
     position: absolute;
-    top: 50px; /* match .navbar height */
-    right: 1rem;
+    right: 0rem;
     background: var(--bg-primary);
-    width: 20%;
+    width: 60%;
+    height: 100%;
     border: 1px solid #ddd;
     padding: 0.75rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    height: auto;
+    z-index: 1000;
+    transform: translateX(100%);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease-in-out;
   }
 
   .nav-links.open {
-    display: flex;
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
   }
 
   .nav-links a {
