--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,9 @@
   --bg-primary: #f5f5f5;
   --brand: black;
   --text-secondary: #f5f5f5;
+  --svb-teal: #67bed9;
+  --svb-orange: #ff9244;
+  --svb-grey: #dadada;
 }
 
 body {
@@ -48,8 +51,34 @@ a {
 }
 
 .navbar, .content {
-  width: 95%;
-  max-width: 1843px;
+  width: 100%;
+  // max-width: 1843px;
+}
+
+.navbar-color-blocks {
+  display: flex;
+  height: 8px;
+  width: 35%;
+  border-radius: 0;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.navbar-color-blocks .block {
+  flex: 1;
+}
+
+.navbar-color-blocks .block:nth-child(1) {
+  background-color: var(--svb-orange);
+}
+
+.navbar-color-blocks .block:nth-child(2) {
+  background-color: var(--svb-teal);
+}
+
+.navbar-color-blocks .block:nth-child(3) {
+  background-color: var(--svb-grey);
 }
 
 /* ========================================
@@ -60,15 +89,18 @@ a {
   height: 64px;
   display: flex;
   justify-content: space-between;
-  border-bottom: 3px solid #000000;
+  border-bottom: 2px solid #000000;
   background: var(--bg-primary);
+}
+
+.brand {
+  padding-left: 3%;
 }
 
 .brand img {
   max-height: 64px;
   position: relative;
   bottom: -15px;
-  margin-left: -17px;
 }
 
 .nav-links {
@@ -145,8 +177,10 @@ a {
   }
 
   .nav-toggle img {
-    width: 48px;
-    height: 48px;
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+    margin-bottom: 9px;
   }
 
   .nav-close {
