--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,22 @@
    BASE STYLES
    ======================================== */
 
+* {
+  box-sizing: border-box;
+   max-width: 100%;
+}
+
+body {
+  overflow-x: hidden;
+  width: 100%;
+  position: relative;
+}
+
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 :root {
   --text-primary: #333;
   --bg-primary: #f5f5f5;
@@ -18,8 +34,8 @@
 }
 
 body {
-  width: 100%;
   margin: 0;
+  overflow-x: hidden;
   font-family: "Source Sans 3", sans-serif;
   color: var(--text-primary);
   background-color: var(--bg-primary);
@@ -100,7 +116,7 @@ a {
 .brand img {
   max-height: 64px;
   position: relative;
-  bottom: -15px;
+  bottom: -13px;
 }
 
 .nav-links {
@@ -160,6 +176,88 @@ a {
 
 .nav-close {
   display: none;
+}
+
+/* ========================================
+   Content Blocks
+   ======================================== */
+
+.content-block {
+  padding: 0px 6%;
+}
+
+.tagline { 
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  align-items: center;
+  width: 85%;
+}
+
+.tagline-text {
+  font-size: 1rem;
+  line-height: 1.1rem;
+  padding-top: 2px;
+}
+
+.square { 
+  min-width: 20px;
+  min-height: 20px;
+  width: 20px;
+  height: 20px;
+  background-color: var(--brand);
+  // margin-right: 10px;
+}
+
+.main-heading {
+  font-size: 4rem;
+  line-height: 3rem;
+  font-weight: 900;
+  padding-bottom: 16px;
+  border-bottom: 1px solid var(--brand);
+}
+
+.highlights {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  max-width: 100%;
+  flex-wrap: wrap;
+  // margin-top: 2rem;
+}
+
+.highlight {
+  min-width: 300px;
+  max-width: 450px;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.highlight p {
+  margin: 0;
+}
+
+.highlight-orange {
+  border-left: 4px solid var(--svb-orange);
+}
+
+.highlight-teal {
+  border-left: 4px solid var(--svb-teal);
+}
+
+.highlight-grey {
+  border-left: 4px solid var(--svb-grey);
+}
+
+.highlight-title {
+  font-size: 1.3rem;
+}
+
+.highlight-subtitle {
+  padding-top: 10px;
+  font-size: 1rem;
+  font-weight: 300;
 }
 
 /* ========================================
