--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    <script defer src="{{ "/assets/js/carousel.js" | relative_url }}"></script>
     <script defer>
       document.addEventListener("DOMContentLoaded", () => {
         const toggle = document.getElementById("nav-toggle");
