--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -285,8 +285,11 @@ a {
       min-width: 100%;
       flex-shrink: 0;
       background-color: var(--svb-orange);
-      padding: 3rem 2rem;
+      padding: 2rem;
       color: var(--text-primary);
+      display: flex;
+      flex-direction: column;
+      // gap: 2rem;
     }
 
     .carousel-slide.slide-2 {
@@ -304,26 +307,39 @@ a {
       font-size: 0.75rem;
       text-transform: uppercase;
       letter-spacing: 1px;
-      margin-bottom: 1rem;
+      width: fit-content;
     }
 
     .slide-title {
-      font-size: 2rem;
+      margin-top: 30px;
+      font-size: 2.8rem;
       font-weight: bold;
-      margin-bottom: 1rem;
-      line-height: 1.2;
+      line-height: 2.5rem;
     }
 
     .slide-description {
-      font-size: 1rem;
-      line-height: 1.6;
-      margin-bottom: 2rem;
+      margin-top: 30px;
+      font-size: 1.3rem;
+      line-height: 1.5rem;
       opacity: 0.9;
     }
 
     .slide-features {
-      font-size: 0.9rem;
-      line-height: 1.8;
+      display: flex;
+      gap: 0.75rem;
+      border-top: 1px solid rgba(0, 0, 0, 0.3);
+      margin-top: 40px;
+      font-size: 1.3rem;
+      line-height: 1.5rem;
+      padding-top: 40px;
+    }
+
+    .feature-arrow {
+      flex-shrink: 0;
+    }
+
+    .feature-text {
+      flex: 1;
     }
 
     .carousel-indicators {
