--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -260,6 +260,20 @@ a {
   font-weight: 300;
 }
 
+.call-to-action-text {
+  text-align: center;
+  font-size: 2.8rem;
+  line-height: 2.7rem;
+  font-weight: 600;
+  color: var(--brand);
+}
+
+.call-to-action-button {
+  padding: 12px 35px;
+  color: var(--bg-primary);
+  background-color: var(--brand);
+}
+
 /* ========================================
    CAROUSEL STYLES
    ======================================== */
